# golomb2025

./: .gitignore  GOL_11.txt  GOL_85.txt  GOL_n13.txt  GOL_n15.txt  Makefile  README.md
go/: README.md  build.sh  go.mod  golomb  lut.go  main.go  ruler.go  solver.go  test.sh
include/: bench.h  golomb.h
java/: Debug.java  DebugRuler10.java  README.md  golomb.sh  optimal_rulers_java.txt  pom.xml
nvidia/: GOL_n14_cuda.txt  GOL_n14_cuda_16t.txt  GOL_n14_cuda_60s.txt  GOL_n14_cuda_8t.txt  GOL_n15_cuda.txt  GOL_n16_cuda.txt  GOL_n17_cuda.txt  GOL_n18_cuda.txt  GOL_n19_cuda.txt  GOL_n20_cuda.txt  GOL_n21_cuda.txt  Makefile  README.md  build_cuda_12.9nv.sh  build_cuda_nv.sh  glibc_c23_math_compat.h  golomb_nv  golomb_nv.cu
ruby/: README.md  build.sh  golomb.rb  lut.rb  ruler.rb  solver.rb
rust/: Cargo.toml  README.md  build.sh
rust/src/: lut.rs  main.rs  ruler.rs  solver.rs
script/: cpod  cppy
src/: bench.c  dup_avx2.asm  dup_avx2_gather.asm  dup_avx2_gather.c  dup_avx2_unrolled.asm  dup_avx512.c  lut.c  main.c  solver.c  solver_creative.c  solver_evolution.c  solver_mpa_harness.c  solver_physics.c  solver_sat.c  solver_traditional_opt.c
src/asm/: dup_avx2.asm  dup_avx2_gather.asm  dup_avx2_unrolled.asm  solver_mp_v2.asm
test/: Makefile  benchmark_algebraic_13_14.c  benchmark_algorithms_13_14.c  benchmark_algorithms_9_12.c  benchmark_extended.c  benchmark_n10_11.c  benchmark_solvers.c  simple_n9_12  test_new_solvers.c
test/benchmark_logs/: algorithms_n9_12_runs8_1780677457.txt  algorithms_n9_12_runs8_1780677575.txt  algorithms_n9_12_runs8_1780677585.txt  (+9 more)
(+8 files in other folders)
