[package]
name = "golomb"
version = "0.1.0"
edition = "2021"
authors = ["Windsurf Engineering Team"]
description = "Golomb Ruler Finder - Rust Implementation"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
num_cpus = "1.16"
rayon = "1.8"
indicatif = "0.17"
lazy_static = "1.4"
chrono = "0.4"
